# backend-tcc-fitness

./: .gitignore  README.md  exercicios.json  json_mysql.py  main.py  pip.conf  pyproject.toml  teste.py
core/: database.py
routers/apis/usuario/: cadastro.py
routers/models/: consultas.py  models.py
src/core/: config.py  init_db.py  postgressdb.py
src/routers/apis/gpt/: funcs_gpt.py  gpt.py  gpt_dieta.py
src/routers/apis/treino/: listagem.py
src/routers/apis/usuario/: cadastro.py  gpt.py
src/routers/models/: anamnesemodel.py  query_db.py  usuario_model.py
